2008-05-09  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* doc/tutorial/matlab_itpp.doc: Documentation improvement

2008-04-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/modulator_nd_test.cpp: Cosmetic fix - remove doubled
	semicolon

	* Unify coding style using an astyle source code formatter

	This huge patch is intended to unify the coding style for all IT++
	source and header files. The formatting has been performed with
	the astyle v1.22 program, using the configuration stored in
	extras/astylerc file.

2008-04-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.h: Fix regression of a missing inline keyword in
	outer_product() specialisation

	The inline keyword is necessary for template specialisations that
	are defined in the header file. This bug resulted in linking
	problems without any external BLAS library, when this particular
	specialisation was used.

	Thanks to Markus Dittrich for investigating this problem and
	providing a patch for it on Gentoo Bugzilla (bug #217621).

2008-04-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/signal/fastica.cpp: Fix broken initialisation of
	Fast_ICA::set_init_guess() method

	The set_init_guess() now changes initState, which is checked in
	separate(), so that the provided guess is passed into the solver,
	rather than a zero matrix as before.

	This patch fixes bug report [1941219].

	Signed-off-by: Matthew Chaudhuri <mchaudhuri@users.sourceforge.net>

2008-04-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/converters.cpp, itpp/base/converters.h,
	itpp/base/itcompat.cpp, itpp/base/itcompat.h: Move rint() to
	itcompat.{cpp,h}

	This function is conditionally defined on platforms, which do not
	provide their own implementation. Therefore the best place for it
	is in itcompat.{cpp,h} files.

	* itpp/base/itcompat.h, itpp/base/math/trig_hyp.h,
	itpp/signal/poly.cpp, itpp/signal/window.cpp,
	itpp/base/itcompat.cpp: Move asinh(), acosh() and atanh() to